add: okx mexc gate bybit exchange

--- a/template/cex/cex.go.tmpl
+++ b/template/cex/cex.go.tmpl
@@ -21,6 +21,6 @@ func (c *Connector) SymbolPattern(symbol string) string {
 	panic("implement me")
 }
 
-func NewConnector(cred *platforms.Credentials, client *http.Client) platforms.Connector {
+func NewConnector(cred *platforms.Credentials, client *http.Client) platforms.SpotConnector {
 	return &Connector{Credentials: cred, Client: client}
 }
