--- a/template/cex/stream.go.tmpl
+++ b/template/cex/stream.go.tmpl
@@ -10,12 +10,12 @@ type MarketStream struct {
 	*platforms.StreamBase
 }
 
-func (m *MarketStream) DepthStream(ctx context.Context, symbol string, channel chan<- types.DepthEntry) error {
+func (stream *MarketStream) DepthStream(ctx context.Context, symbol string, channel chan<- types.DepthEntry) error {
 	//TODO implement me
 	panic("implement me")
 }
 
-func (m *MarketStream) CandleStream(ctx context.Context, symbol, interval string, channel chan<- types.CandleEntry) error {
+func (stream *MarketStream) CandleStream(ctx context.Context, symbol, interval string, channel chan<- types.CandleEntry) error {
 	//TODO implement me
 	panic("implement me")
 }
