--- a/template/cex/userStream.go.tmpl
+++ b/template/cex/userStream.go.tmpl
@@ -11,22 +11,22 @@ type UserDataStream struct {
 	*platforms.StreamBase
 }
 
-func (u *UserDataStream) Login() error {
+func (stream *UserDataStream) Login() error {
 	//TODO implement me
 	panic("implement me")
 }
 
-func (u *UserDataStream) OrderStream(ctx context.Context, channel chan<- types.OrderUpdateEntry) error {
+func (stream *UserDataStream) OrderStream(ctx context.Context, channel chan<- types.OrderUpdateEntry) error {
 	//TODO implement me
 	panic("implement me")
 }
 
-func (u *UserDataStream) BalanceStream(ctx context.Context, channel chan<- types.BalanceUpdateEntry) error {
+func (stream *UserDataStream) BalanceStream(ctx context.Context, channel chan<- types.BalanceUpdateEntry) error {
 	//TODO implement me
 	panic("implement me")
 }
 
-func (u *UserDataStream) AccountStream(ctx context.Context, channel chan<- types.AccountUpdateEntry) error {
+func (stream *UserDataStream) AccountStream(ctx context.Context, channel chan<- types.AccountUpdateEntry) error {
 	//TODO implement me
 	panic("implement me")
 }
